# yolov8-onnx-ise

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_shared.cmake  CMakeLists_static.cmake  README.md  coco.yaml  requirements.txt  riscv_toolchain.cmake
app/: inference.cpp  inference.h  main.cpp
baremetal/: README.md  generate_c_model.py  main.c  platform.c
cpu/: inference.cpp
opencl/: CMakeLists.txt  README.md  generate_opencl_model.py  run_yolov8_coco.cpp  run_yolov8_opencl.py
scripts/: calculate_ops.py  coco_utils.py  dummy_quantize.py  get_yolo.py  quantize_onnx.py  quantize_yolo.py  run_coco.py
